<resources>
    <string name="app_name">Baby Needs</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="addItem">Add Item</string>
    <string name="additem">Add item</string>
    <string name="add_item">Add item</string>
    <string name="enterItem">Enter item</string>
    <string name="babyItem">Enter baby item</string>
    <string name="quntity">Quantity</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="save">Save</string>
    <string name="sureText">Are you sure?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
</resources>
