<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:padding="19dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textAlert"
                android:text="@string/sureText"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:layout_width="wrap_content"
                android:textSize="18sp"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnYes"
                android:text="@string/yes"
                android:background="@color/design_default_color_error"
                android:textColor="@android:color/white"
                android:layout_marginTop="35dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btnNo"
                android:text="@string/no"
                android:layout_alignParentEnd="true"
                android:background="@color/design_default_color_error"
                android:textColor="@android:color/white"
                android:layout_marginTop="35dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
